Solved too fast search loading on mobile

--- a/frontend/application/style/2-settings/global-settings.scss
+++ b/frontend/application/style/2-settings/global-settings.scss
@@ -20,6 +20,7 @@ $errorColor: #f41f1f;
 
 body {
   max-width: 1280px;
+  min-width: 480px;
   font-size: 16px;
   font-family: $mainFont;
   color: $textColor;
