--- a/public/style/application/build.css
+++ b/public/style/application/build.css
@@ -59,6 +59,7 @@ a {
 
 body {
   max-width: 1280px;
+  min-width: 480px;
   font-size: 16px;
   font-family: "Quicksand", sans-serif;
   color: #5b5b5b;
